feat: add Envio activity fallback
